# zsb

./: .gitignore  README.md  pyproject.toml
data/: general_capabilities_chinese_s.jsonl  general_capabilities_english.jsonl  general_capabilities_french.jsonl  general_capabilities_korean.jsonl  translation_cs_uk.jsonl  translation_en_cs.jsonl  translation_en_de.jsonl  translation_en_es.jsonl  translation_en_hi.jsonl  translation_en_is.jsonl  translation_en_ja.jsonl  translation_en_ru.jsonl  translation_en_uk.jsonl  translation_en_zh.jsonl  translation_ja_zh.jsonl
zsb/: attributes.py  models.py  utils.py
zsb/mbr/: generate_candidates.py  judge_best_candidates.py  run_mbr.py  utils.py
zsb/scripts/: generate_answers.py  generate_da_eval.py  generate_pairwise_eval.py  generate_prompts.py  generate_safety_eval.py
zsb/scripts_multimodal/: generate_answers.py  generate_da_eval.py  generate_prompts.py  generate_safety_eval.py
zsb/tasks/: README.md  __init__.py  base.py  end_to_end_mt_eval.py  end_to_end_mt_eval_wo_examples.py  general_translation.py  list.py  multilingual_general_purpose_chat.py  multilingual_general_purpose_chat_topic_only.py  multilingual_general_purpose_chat_topic_subtopic.py  multilingual_vlm_general_purpose_chat.py  transcreation.py  translation_w_hard_rules.py  vlm_general_purpose_chat.py
